[workspace]
resolver = "3"
members = [ "fume", "fume-core", "fume-async", "fume-blocking" ]

[workspace.dependencies]
fume-core = { version = "0.0.0", path = "fume-core" }
fume-async = { version = "0.0.0", path = "fume-async" }
fume-blocking = { version = "0.0.0", path = "fume-blocking" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
