[workspace]
resolver = "3"
members = ["fume", "fume-core"]

[workspace.dependencies]
fume-core = { version = "0.0.1", path = "fume-core" }
reqwest = { version = "0.12.23" }
serde = { version = "1.0.226", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.145"
thiserror = "2.0.15"
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
