[package]
name = "fume-backend"
version = "0.0.1"
edition = "2024"
license = "GLWTPL"
description = "A strongly-opinionated Rust wrapper for steam web APIs."
repository = "https://github.com/dearfl/fume"
keywords = [ "steam", "api" ]
exclude = [ ".*", "flake.*" ]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
reqwest = { workspace = true, optional = true }

[lints.rust]
unsafe_code = "forbid"
