[package]
name = "fume-blocking"
version = "0.0.0"
edition = "2024"
license = "GLWTPL"
description = "A strongly-opinionated Rust wrapper for steam web APIs."
repository = "https://github.com/dearfl/fume"
keywords = [ "steam", "api" ]
exclude = [ ".*", "flake.*" ]

[dependencies]
reqwest = { version = "0.12.22", optional = true, features = ["blocking"] }

[features]
reqwest = ["dep:reqwest"]

[lints.rust]
unsafe_code = "forbid"
