[package]
name = "fume"
version = "0.0.0"
edition = "2024"
license = "GLWTPL"
description = "A strongly-opinionated Rust wrapper for steam web APIs."
repository = "https://github.com/dearfl/fume"
keywords = [ "steam", "api" ]
exclude = [ ".*", "flake.*" ]

[dependencies]
fume-core = { workspace = true }
fume-async = { workspace = true, optional = true }
fume-blocking = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.15"

[features]
default = ["async", "reqwest"]
async = ["dep:fume-async"]
blocking = ["dep:fume-blocking"]
reqwest = ["fume-async/reqwest", "fume-blocking/reqwest"]

[dev-dependencies]
anyhow = "1.0.99"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }

[[example]]
name = "get_supported_api_list_async"
path = "examples/get_supported_api_list_async.rs"
required-features = ["async", "reqwest"]

[[example]]
name = "get_supported_api_list_blocking"
path = "examples/get_supported_api_list_blocking.rs"
required-features = ["blocking", "reqwest"]

[lints.rust]
unsafe_code = "forbid"
